# oshit

./: .gitignore  Cargo.toml  README.md  build.rs  go.mod  lib.go
.github/workflows/: release.yml
docs/: index.html
docs/changes/: 1775633373-release-github-actions.md  1775635199-github-pages-landing-page.md  1775731055-shift-demo-stability-and-cursor.md  1779003671-hide-ime-composition-window.md
main/: main.go
src/: main.rs
winapi/: const.go  winapi.go
