[package]
name = "oshit"
version = "2.1.1"
edition = "2024"

[build-dependencies]
embed-resource = "3"

[dependencies]
toml_edit = "0.22"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]
